[package]
name = "rollbuf"
version = "0.1.0"
authors = ["Milan Opath <milan.opath@gmail.com>"]
description = "An extendable buffer which rolls the last incomplete part to the beginning so it can be completed and consumed."
documentation = "https://docs.rs/rollbuf"
homepage = "https://github.com/milancio42/rjoin"
keywords = ["buffer", "roll"]
license = "Unlicense/MIT"

